# cryptocurrency-htfx-exchange-dash-rs

./: .gitignore  Makefile  README.md
crates/dash-app/: Cargo.toml  Trunk.toml  index.html
crates/dash-app/src/: main.rs
crates/dash-charts/src/: candlestick.rs  depth.rs
crates/dash-components/: Cargo.toml
crates/dash-components/src/: dashboard.rs  lib.rs  order.rs  ticker_bar.rs  trade_history.rs
crates/dash-core/: Cargo.toml
deploy/docker/: Dockerfile.frontend  Dockerfile.server-end  docker-compose.yaml
deploy/firecracker/: setup.sh  vm-config.json
server/dash-server/: Cargo.toml
server/dash-server/src/: main.rs  mock.rs  ws.rs
static/css/: theme.css
