[package]
name = "dash-app"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
repository = "https://github.com/enginevector/btc-exchange-dash"
description = "BTC Exchange Dashboard - WASM frontend application"

[dependencies]
dash-core = { path = "../dash-core" }
dash-state = { path = "../dash-state" }
dash-charts = { path = "../dash-charts" }
dash-websocket = { path = "../dash-websocket" }
dash-components = { path = "../dash-components" }

leptos = { version = "0.7", features = ["csr"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList"] }
console_error_panic_hook = "0.1"

tracing = "0.1"
tracing-wasm = "0.2"